service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: my-app
  name: my-app
spec:
  ports:
  - name: 8080-tcp
    port: 8080
  selector:
    deployment: my-app
